# gestures-research

./: .gitignore  README.md  encoding.md  gesture_labels.jsonl  pyproject.toml
scripts/: custom_trainingset.py  preprocess_hagrid.py  preprocess_jester.py  preprocess_wlasl.py  print_zip_file_tree.py  realtime_test.py  scripts.md
src/: dataset_visualize.py  train_model.py  visualize.py
src/gesture_research/model/: vqvae.py
src/model/: vqvae.py
