[project]
name = "gestures-research"
version = "0.1.0"
description = "Adding Gesture modality to multi-modal llms."
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.21",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["gesture_research"]
package-dir = {"" = "src"}

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }